fixed bug where navbar went behind trips when retracted

--- a/src/pages/Trips.css
+++ b/src/pages/Trips.css
@@ -8,10 +8,10 @@
 }
 
 #trip-summary-components {
-    /* left: 0; */
     background-color: antiquewhite;
     padding: 20px;
     max-width: 500px;
+    z-index: 0;
 }
 
 
